# avito-rent-assistant

./: .gitignore  bot.py  config.py  main.py  messages.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: github-ci.yml
avito/: avito.py
avito/base/: context_controller.py
avito/schema/messenger/: models.py
docs/: avito.rst  avito.schema.auth.rst  avito.schema.rst  avito.schema.user.rst  conf.py  hotelConditions.txt  index.rst  rag.rst  yandexgpt.rst
docs/_build/doctrees/: avito.base.doctree  avito.doctree  avito.schema.auth.doctree  avito.schema.doctree  avito.schema.messenger.doctree  avito.schema.rating.doctree  avito.schema.user.doctree  bot.doctree  config.doctree  environment.pickle  googlesheets.doctree  index.doctree  main.doctree  modules.doctree  rag.doctree  test.doctree  yandexgpt.doctree
docs/_build/html/: .buildinfo  avito.base.html  avito.html  avito.schema.auth.html  avito.schema.html  avito.schema.messenger.html  avito.schema.rating.html  avito.schema.user.html  bot.html  config.html  genindex.html  googlesheets.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  rag.html  search.html  searchindex.js  test.html  yandexgpt.html
docs/_build/html/_sources/: avito.base.rst.txt  avito.schema.messenger.rst.txt  avito.schema.rating.rst.txt  googlesheets.rst.txt  modules.rst.txt
googlesheets/: __init__.py  googlesheet.py
rag/: RAGGenerator.py  raggenerator.py
yandexgpt/: __init__.py  example.py  yandexgpt.py
